--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-hi everyone
+<!DOCTYPE html>
+<html>
+<head>
+	<title>CSS</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="login.html">Login</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section>
+		<h2>Home</h2>
+		<div id="div1">
+			<p class="webtext active">Lorem ipsum</p>
+			<p class="webtext">Lorem ipsum</p>
+			<p class="webtext">Lorem ipsum</p>
+		</div>
+	</section>
+</body>
+</html>
